<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white_color">
    <!--    <android.support.design.widget.AppBarLayout
            android:id="@+id/materialup_appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:backgroundTint="@color/white_color"
                android:background="@color/colorPrimary"
                app:titleTextColor="@color/colorPrimary"
                app:theme="@style/MyDarkToolbarStyle"
                app:title="@string/login_header"/>
        </android.support.design.widget.AppBarLayout>-->


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/abc_action_bar_default_height_material">

        <RelativeLayout
            android:id="@+id/back_relativeLayout"
            android:layout_width="52dp"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_action_back"
                android:tint="@color/signup_btn_color" />
        </RelativeLayout>

        <TextView
            android:id="@+id/header_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="31dp"
            android:layout_toEndOf="@+id/back_relativeLayout"
            android:text="@string/artist_gender_header"
            android:textSize="20dp"
            android:textStyle="bold" />


    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp"

            android:orientation="vertical">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/talent_requiter"
                android:textSize="16dp" />

            <LinearLayout
                android:id="@+id/select_talent_require"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/editfield_background"
                android:padding="10dp">

                <TextView
                    android:id="@+id/talent_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:singleLine="true"
                    android:text="Modeling Agent"

                    android:textSize="14dp" />
            </LinearLayout>


            <Button
                android:id="@+id/btn_continue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/button_background"
                android:text="@string/artist_btn_continue"
                android:textSize="17sp"
                android:textStyle="bold"
                android:textAllCaps="false"
                android:textColor="@color/white_color"></Button>


        </LinearLayout>
    </ScrollView>


</LinearLayout>
