<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white_color">
<!--    <android.support.design.widget.AppBarLayout
        android:id="@+id/materialup_appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:backgroundTint="@color/white_color"
            android:background="@color/colorPrimary"
            app:titleTextColor="@color/colorPrimary"
            app:theme="@style/MyDarkToolbarStyle"
            app:title="@string/login_header"/>
    </android.support.design.widget.AppBarLayout>-->


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/abc_action_bar_default_height_material">

        <RelativeLayout
            android:id="@+id/back_relativeLayout"
            android:layout_width="52dp"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_action_back"
                android:tint="@color/signup_btn_color" />
        </RelativeLayout>

        <TextView
            android:id="@+id/header_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="31dp"
            android:layout_toEndOf="@+id/back_relativeLayout"
            android:text=""
            android:textSize="20dp"
            android:textStyle="bold" />


    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
         >



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/signup_header"
                android:textColor="#333333"
                android:textSize="24sp"
                android:textStyle="bold" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                >
                <EditText
                    android:id="@+id/email_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/signup_email_hint"
                    android:singleLine="true"/>

            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"

                >

                <EditText
                    android:id="@+id/pwd_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/signup_pwd"
                    android:singleLine="true"
                    android:inputType="textPassword"

                    />

            </android.support.design.widget.TextInputLayout>


          <!--  <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/signup_email"
                android:textSize="16dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/editfield_background"

                android:padding="10dp">

                <EditText
                    android:id="@+id/email_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:background="@android:color/transparent"
                    android:hint="@string/signup_email_hint"
                    android:inputType="textEmailAddress"
                    android:textSize="14dp" />
            </LinearLayout>-->


         <!--   <TextView
                android:id="@+id/pwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/signup_pwd"
                android:singleLine="true"
                android:textSize="16dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/editfield_background"

                android:padding="10dp">

                <EditText
                    android:id="@+id/pwd_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:hint="@string/signup_pwd"
                    android:inputType="textPassword"
                    android:textSize="14dp" />
            </LinearLayout>-->

            <Button

                android:id="@+id/btn_sign_upp"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_marginTop="25dp"
                android:background="@drawable/button_background"
                android:text="@string/signup_btn_txt"
                android:textSize="17sp"
                android:textStyle="bold"
                android:textAllCaps="false"
                android:textColor="@color/white_tran_color"></Button>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:orientation="horizontal"
                android:weightSum="1">

                <View
                    android:layout_width="0dp"
                    android:layout_height="0.8dp"
                    android:layout_gravity="center"
                    android:layout_marginRight="20dp"
                    android:layout_weight=".45"
                    android:background="@android:color/darker_gray"></View>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight=".1"
                    android:text="Or"></TextView>

                <View
                    android:layout_width="0dp"
                    android:layout_height="0.8dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="10dp"
                    android:layout_weight=".45"
                    android:background="@android:color/darker_gray"></View>


            </LinearLayout>


            <LinearLayout
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_marginTop="25dp"
                android:background="@drawable/facebook_button_background"
                android:gravity="center"
                android:orientation="horizontal">

                <LinearLayout

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center">

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="28dp"
                        android:layout_height="28dp"
                        app:srcCompat="@drawable/fb" />

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="10dp"
                        android:layout_toRightOf="@+id/imageView2"
                        android:text="@string/signup_face_book"
                        android:textColor="@color/facebook_btn_color"
                        android:textSize="17dp"
                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>


        </LinearLayout>
    </ScrollView>


</LinearLayout>
